fix layout issues to allow transactions to scroll correctly

--- a/app/components/layout/AppBar.scss
+++ b/app/components/layout/AppBar.scss
@@ -1,3 +1,4 @@
 .sidebarIcon {
   width: 30px;
+  height: 100%;
 }
