--- a/app/components/wallet/WalletHome.scss
+++ b/app/components/wallet/WalletHome.scss
@@ -1,16 +1,21 @@
+@import "./navigation/walletNavConfig";
+
+.component {
+  padding: 20px;
+  height: calc(100% - #{$walletNavHeight});
+  overflow-y: scroll;
+}
+
 .list {
-  display: flex;
-  flex-wrap: wrap;
+  border-radius: 4px;
+  background-color: #fafbfc;
+  border: solid 1px #c6cdd6;
+  height: 100%;
 }
 
 .transaction {
-  width: 50%;
   height: 150px;
   margin-top: 20px;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.11);
-
-  @media (max-width: 600px) {
-    width: 100%;
-  }
 }
 
